--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <script type="text/javascript" src="js/changeTxtFile.js"></script>
 </head>
 <body>
-    <form>
-        <input type="file" id="uploadFile">
-        <input type="button" value="upload" onclick="checkExtension()">
+    <form action="choose" method="POST" enctype="multipart/form-data">
+        <input type="file" id="uploadFile" name="fileName">
+        <input type="submit" value="upload">
     </form>
 </body>
 </html>
